--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,11 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>be.hikage.maven.plugins</groupId>
+    <groupId>engineering.schumann.maven.plugins</groupId>
     <artifactId>maven-xmlmerger-plugin</artifactId>
+    <version>1.0.0</version>
+
     <packaging>maven-plugin</packaging>
-    <version>1.0.3-SNAPSHOT</version>
 
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -27,8 +28,9 @@
         <version>7</version>
     </parent>
 
-    <name>maven-xmlmerger-plugin Maven Mojo</name>
-    <url>https://github.com/gcuisinier/maven-xmlmerger-plugin</url>
+
+    <name>Maven Mojo maven-xmlmerger-plugin</name>
+    <url>https://github.com/Schumann-Engineering/maven-xmlmerger-plugin</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -44,9 +46,9 @@
         </license>
     </licenses>
 
-    <developers>
-        <developer>
-            <id>gcuisinier</id>
+
+  	<contributors>
+    	<contributor>
             <name>Gildas Cuisinier</name>
             <email>gildas.cuisinier@gmail.com</email>
             <url>http://www.hikage.be</url>
@@ -55,14 +57,14 @@
             <roles>
                 <role>developer</role>
             </roles>
-        </developer>
+        </contributor>
+    </contributors>
 
-    </developers>
 
     <scm>
-        <url>https://github.com/gcuisinier/maven-xmlmerger-plugin</url>
-        <connection>scm:git:git@github.com:gcuisinier/maven-xmlmerger-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:gcuisinier/maven-xmlmerger-plugin.git</developerConnection>
+        <url>https://github.com/Schumann-Engineering/maven-xmlmerger-plugin</url>
+        <connection>scm:git:git@github.com:Schumann-Engineering/maven-xmlmerger-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:Schumann-Engineering/maven-xmlmerger-plugin.git</developerConnection>
     </scm>
 
     <distributionManagement>
@@ -78,13 +80,13 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
-            <version>2.0</version>
+            <version>3.9.9</version>
         </dependency>
 
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.1</version>
+            <version>2.18.0</version>
         </dependency>
 
         <dependency>
@@ -118,14 +120,14 @@
         <dependency>
             <groupId>org.codehaus.plexus</groupId>
             <artifactId>plexus-component-annotations</artifactId>
-            <version>1.0-beta-3.0.5</version>
+            <version>2.2.0</version>
         </dependency>
 
         <!-- The plexus container -->
         <dependency>
             <groupId>org.codehaus.plexus</groupId>
             <artifactId>plexus-container-default</artifactId>
-            <version>1.0-beta-3.0.5</version>
+            <version>2.1.1</version>
         </dependency>
 
 
@@ -137,16 +139,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.13.0</version>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>10</source>
+                    <target>10</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.plexus</groupId>
                 <artifactId>plexus-component-metadata</artifactId>
-                <version>1.0-beta-3.0.5</version>
+                <version>2.2.0</version>
                 <executions>
                     <execution>
                         <id>process-classes</id>
@@ -165,7 +167,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>3.0-beta-3</version>
+                <version>3.21.0</version>
                 <inherited>false</inherited>
                 <executions>
                     <execution>
@@ -179,7 +181,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>2.7</version>
+                <version>3.15.1</version>
                 <executions>
                     <execution>
                         <id>generated-helpmojo</id>
@@ -192,7 +194,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>2.7</version>
                 <configuration>
                     <instrumentation>
 
@@ -221,7 +223,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-invoker-plugin</artifactId>
-                        <version>1.5</version>
+                        <version>3.9.0</version>
                         <configuration>
                             <debug>false</debug>
                             <projectsDirectory>src/it</projectsDirectory>
@@ -260,6 +262,7 @@
                 </plugins>
             </build>
         </profile>
+        <!--
         <profile>
             <id>sign</id>
             <activation>
@@ -270,7 +273,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.4</version>
+                        <version>3.2.7</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -283,8 +286,8 @@
                     </plugin>
                 </plugins>
             </build>
-
         </profile>
+        -->
     </profiles>
 
 
@@ -293,17 +296,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>2.7</version>
+                <version>3.15.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.8.0</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>2.7</version>
             </plugin>
 
         </plugins>
