--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>engineering.schumann.maven.plugins</groupId>
+    <groupId>schumann-engineering.maven-plugins</groupId>
     <artifactId>maven-xmlmerger-plugin</artifactId>
     <version>1.0.0</version>
 
@@ -29,7 +29,7 @@
     </parent>
 
 
-    <name>Maven Mojo maven-xmlmerger-plugin</name>
+    <name>Maven XML File Merger Plugin</name>
     <url>https://github.com/Schumann-Engineering/maven-xmlmerger-plugin</url>
 
     <properties>
